--- a/csharp/tools/ZeroC.Ice.Slice.Tools/ZeroC.Ice.Slice.Tools.csproj
+++ b/csharp/tools/ZeroC.Ice.Slice.Tools/ZeroC.Ice.Slice.Tools.csproj
@@ -22,6 +22,8 @@
       <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
       <PackageTags>Ice;RPC;MSBuild;Slice</PackageTags>
       <PackageReadmeFile>README.md</PackageReadmeFile>
+      <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
+      <PackageIcon>logo-128x128.png</PackageIcon>
 
       <!-- Signing properties -->
       <TimeStampServer Condition="'$(SIGN_TIMESTAMPSERVER)' == ''">http://timestamp.digicert.com</TimeStampServer>
@@ -43,6 +45,7 @@
       <Content Include="ZeroC.Ice.Slice.Tools.targets" Pack="true" PackagePath="build/" />
       <None Include="$(OutputPath)/$(AssemblyName).dll" Pack="true" PackagePath="tasks/" Visible="false" />
       <Content Include="README.md" Pack="true" PackagePath="/" />
+      <Content Include="$(MSBuildThisFileDirectory)../../../assets/logo-128x128.png" Pack="true" PackagePath="/" />
     </ItemGroup>
 
     <ItemGroup>
