--- a/csharp/src/iceboxnet/iceboxnet.csproj
+++ b/csharp/src/iceboxnet/iceboxnet.csproj
@@ -10,6 +10,8 @@
     <ToolCommandName>iceboxnet</ToolCommandName>
     <PackageTags>Ice</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
+    <PackageIcon>logo-128x128.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../Ice/Ice.csproj" />
@@ -28,6 +30,7 @@
     <!-- Packaging files -->
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
+    <Content Include="../../../assets/logo-128x128.png" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 </Project>
