--- a/.github/workflows/build-dotnet-packages.yml
+++ b/.github/workflows/build-dotnet-packages.yml
@@ -12,6 +12,12 @@ on:
     secrets:
       NUGET_API_KEY:
         required: false
+      AZURE_TENANT_ID:
+        required: true
+      AZURE_CLIENT_ID:
+        required: true
+      AZURE_CLIENT_SECRET:
+        required: true
   workflow_dispatch:
     inputs:
       ice_version:
@@ -53,6 +59,10 @@ jobs:
         uses: ./.github/actions/build-slice-compiler
         with:
           compiler-name: slice2cs
+        env:
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Upload Compiler Artifact
         uses: actions/upload-artifact@v4
@@ -91,6 +101,31 @@ jobs:
       # The .NET NuGet package includes bzip2 DLLs from the C++ Windows distribution for protocol compression
       - name: Restore C++ dependencies
         run: nuget restore cpp/msbuild/ice.sln
+
+      - name: Pack .NET Packages
+        run: dotnet msbuild csharp\msbuild\ice.proj /t:BuildDist /p:Configuration=Release /p:IcePackageVersion="${{ inputs.ice_version }}"
+
+      - name: Collect Files to Sign
+        run: |
+          Get-ChildItem -Path csharp\src -Directory | ForEach-Object {
+              $name = $_.Name
+              "csharp\src\$name\bin\Release\net8.0\$name.dll"
+          } | Set-Content -Path ${{ github.workspace }}\catalog.txt -Encoding UTF8
+          Add-Content -Path "${{ github.workspace }}\catalog.txt" -Value "csharp\tools\ZeroC.Ice.Slice.Tools\bin\Release\netstandard2.0\ZeroC.Ice.Slice.Tools.dll"
+
+      - name: Sign .NET Assemblies with Trusted Signing
+        uses: azure/trusted-signing-action@v0
+        with:
+          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          endpoint: https://eus.codesigning.azure.net/
+          trusted-signing-account-name: zeroc
+          certificate-profile-name: zeroc-ice
+          files-catalog: ${{ github.workspace }}\catalog.txt
+          file-digest: SHA256
+          timestamp-rfc3161: http://timestamp.acs.microsoft.com
+          timestamp-digest: SHA256
 
       - name: Pack .NET Packages
         run: dotnet msbuild csharp\msbuild\ice.proj /t:Pack /p:Configuration=Release /p:IcePackageVersion="${{ inputs.ice_version }}"
