--- a/.github/workflows/build-dotnet-packages.yml
+++ b/.github/workflows/build-dotnet-packages.yml
@@ -102,8 +102,12 @@ jobs:
       - name: Restore C++ dependencies
         run: nuget restore cpp/msbuild/ice.sln
 
+      # Build .NET assemblies. We shutdown the MSBuild server to avoid issues with the signing step. For example ZeroC.Ice.Slice.Tools.dll
+      # main remain in used by the MSBuild server and cannot be signed.
       - name: Pack .NET Packages
-        run: dotnet msbuild csharp\msbuild\ice.proj /t:BuildDist /p:Configuration=Release /p:IcePackageVersion="${{ inputs.ice_version }}"
+        run: |
+          dotnet msbuild csharp\msbuild\ice.proj /t:BuildDist /p:Configuration=Release /p:IcePackageVersion="${{ inputs.ice_version }}"
+          dotnet build-server shutdown
 
       - name: Collect Files to Sign
         run: |
