--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -225,7 +225,8 @@ jobs:
           python scripts\process_crash_dumps.py `
               --dumps     $dumpDir `
               --workspace $env:GITHUB_WORKSPACE `
-              --reports   $reportsDir
+              --reports   $reportsDir `
+              --cdb "C:\Program Files (x86)\Windows Kits\10\Debuggers\x64\cdb.exe"
 
       - name: Upload Windows crash dump reports
         uses: actions/upload-artifact@v4
