--- a/.github/actions/documentation/action.yml
+++ b/.github/actions/documentation/action.yml
@@ -89,6 +89,12 @@ runs:
         yard  doc 'ruby/**/*.rb'
       shell: bash
 
+    - name: Generate API reference for PHP
+      working-directory: ./php
+      run: |
+        docker run --rm -v $PWD:/data phpdoc/phpdoc:3
+      shell: bash
+
     # This will perform a full sync of the documentation to S3 every time the workflow is run since
     # the timestamps will always be different. Using --size-only is not sufficient since the
     # documentation may be updated without changing the size of the files. S3 does not offer a hash based sync.
@@ -115,6 +121,8 @@ runs:
         aws s3 sync ./java/build/docs/javadoc s3://${AWS_S3_CODE_BUCKET}/ice/main/api/java --delete
 
         aws s3 sync ./ruby/doc s3://${AWS_S3_CODE_BUCKET}/ice/main/api/ruby --delete
+
+        aws s3 sync ./php/doc/api s3://${AWS_S3_CODE_BUCKET}/ice/main/api/php --delete
 
       env:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws-access-key-id }}
