--- a/certs/server.cnf
+++ b/certs/server.cnf
@@ -18,6 +18,7 @@ emailAddress = info@zeroc.com
 subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid:always,issuer
 keyUsage = critical, digitalSignature, nonRepudiation, keyEncipherment
+# With C# clientAuth is required for servers that act as both client and server.
 extendedKeyUsage = serverAuth, clientAuth
 subjectAltName = @alt_names
 
