--- a/.github/actions/documentation/action.yml
+++ b/.github/actions/documentation/action.yml
@@ -94,7 +94,7 @@ runs:
       run: |
         set -x
         brew install phive
-        phive install --trust-gpg-keys phpDocumentor
+        phive install phpDocumentor --trust-gpg-keys 6DA3ACC4991FFAE5 --temporary
         ./tools/phpDocumentor --config ./phpdoc.dist.xml
       shell: bash
 
