--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,6 +188,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-s3-code-bucket: ${{ secrets.AWS_S3_CODE_BUCKET }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
         if: matrix.config == 'release' && runner.os == 'macOS'
 
       - name: Upload test logs
