--- a/java/build.gradle
+++ b/java/build.gradle
@@ -96,6 +96,7 @@ task alljavadoc(type: Javadoc) {
      exclude(
         '**/android/bluetooth/*.java',
         '**/com/zeroc/Ice/CommunicatorObserverI.java',
+        '**/com/zeroc/Ice/InvocationObserverI.java',
         '**/com/zeroc/Ice/ConnectionI.java',
     )
 }
