--- a/js/package.json
+++ b/js/package.json
@@ -10,7 +10,7 @@
         "access": "public"
     },
     "engines": {
-        "node": ">=18.20.3"
+        "node": ">=22.16.0"
     },
     "keywords": [
         "Ice",
@@ -29,23 +29,23 @@
     },
     "browserslist": "> 0.25%, not dead",
     "devDependencies": {
-        "@eslint/js": "^9.23.0",
+        "@eslint/js": "^9.27.0",
         "@rollup/plugin-strip": "^3.0.4",
-        "@types/node": "^22.5.1",
+        "@types/node": "^22.15.24",
         "c8": "^10.1.3",
-        "del": "^7.1.0",
-        "eslint": "^9.23.0",
-        "globals": "^16.0.0",
+        "del": "^8.0.0",
+        "eslint": "^9.27.0",
+        "globals": "^16.2.0",
         "gulp": "^5.0.0",
         "gulp-ext-replace": "^0.3.0",
         "gulp-ice-builder": "^3.0.4",
         "gulp-typescript": "^5.0.1",
         "http-server": "^14.1.1",
         "jshint": "^2.13.6",
-        "prettier": "^3.3.3",
-        "pump": "^3.0.0",
-        "typedoc": "^0.28.4",
-        "typescript": "^5.5.4",
+        "prettier": "^3.5.3",
+        "pump": "^3.0.2",
+        "typedoc": "^0.28.5",
+        "typescript": "^5.8.3",
         "typescript-formatter": "^7.2.2",
         "vinyl": "^3.0.0",
         "vinyl-paths": "^5.0.0"
@@ -58,6 +58,7 @@
     ],
     "scripts": {
         "build": "gulp",
+        "build-doc": "node dts-bundle.js && npx typedoc --router structure dist/bundle.d.ts --disableGit --disableSources",
         "dist": "gulp dist",
         "clean": "gulp clean",
         "prepack": "node scripts/prepack.js"
