Re-enable MATLAB workflows

--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -2,12 +2,11 @@ name: Matlab
 
 on:
   workflow_dispatch:
-  # TODO: Re-enable once MATLAB outage is fixed
-  # push:
-  #   branches: ["main"]
-  # pull_request:
-  #   # The branches below must be a subset of the branches above
-  #   branches: ["main"]
+  push:
+    branches: ["main"]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: ["main"]
 
 jobs:
   matlab-analyzer:
