--- a/java/build.gradle
+++ b/java/build.gradle
@@ -45,14 +45,6 @@ subprojects {
         options.encoding = "UTF-8"
         options.deprecation = true
     }
-
-    // We want Checkstyle to generally run before Rewrite and to exclude files generated from Slice.
-    tasks.withType(Checkstyle) {
-        task ->
-            rewriteDryRun.dependsOn(task)
-            rewriteRun.dependsOn(task)
-    }
-
 }
 
 task clean(type: Delete) {
@@ -102,21 +94,9 @@ checkstyle {
 }
 
 rewrite {
-    activeRecipe(
-        'org.openrewrite.staticanalysis.RemoveCallsToObjectFinalize',
-        'org.openrewrite.staticanalysis.DefaultComesLast',
-        'org.openrewrite.java.RemoveUnusedImports',
-        'org.openrewrite.java.format.NormalizeFormat',
-        'org.openrewrite.java.format.BlankLines',
-        'org.openrewrite.java.format.Spaces',
-        'org.openrewrite.java.format.NormalizeTabsOrSpaces',
-        'org.openrewrite.java.format.TabsAndIndents',
-        'org.openrewrite.java.format.NormalizeLineBreaks',
-        'org.openrewrite.java.format.RemoveTrailingWhitespace',
-        'org.openrewrite.staticanalysis.CodeCleanup'
-    )
-    checkstyleConfigFile = file("config/checkstyle/checkstyle.xml")
-    activeStyle('com.zeroc.IceRewriteRules')
+    activeRecipe('com.zeroc.IceRewriteRecipes')
+    activeStyle('com.zeroc.IceRewriteStyle')
+
     setExportDatatables(true)
     exclusion(
         // OpenRewrite is technically capable of modifying Groovy and Kotlin files, but we are avoiding this for now.
