Disable formatonSave for Swift

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "[java]": {
         "editor.formatOnSave": false
     },
+    "[swift]": {
+        "editor.formatOnSave": false
+    },
     "gradle.nestedProjects": true,
 }
