--- a/.github/workflows/build-swift-package.yml
+++ b/.github/workflows/build-swift-package.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Setup Xcode
+        uses: ./.github/actions/setup-xcode
+
       - name: Setup C++
         uses: ./.github/actions/setup-cpp
 
