--- a/.github/actions/setup-cpp/action.yml
+++ b/.github/actions/setup-cpp/action.yml
@@ -7,6 +7,12 @@ runs:
       shell: bash
       run: brew install mcpp lmdb
 
+    # https://github.com/actions/runner-images/blob/main/images/macos/macos-15-arm64-Readme.md
+    - name: Use Xcode 16.4
+      if: runner.os == 'macOS'
+      shell: bash
+      run: sudo xcode-select --switch /Applications/Xcode_16.4.app/Contents/Developer
+
     - name: Install dependencies on Linux
       if: runner.os == 'Linux'
       shell: bash
