Update macOS runners & RPM python version

--- a/.github/workflows/build-brew-packages.yml
+++ b/.github/workflows/build-brew-packages.yml
@@ -31,7 +31,7 @@ on:
 
 jobs:
   build-brew-packages:
-    runs-on: macos-latest
+    runs-on: macos-15
 
     steps:
       - name: Checkout Repository
