--- a/.github/workflows/build-maven-packages.yml
+++ b/.github/workflows/build-maven-packages.yml
@@ -40,7 +40,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: macos-latest
+          - os: macos-15
             target: macos-arm64
             artifact-path: cpp/bin/slice2java
           - os: windows-latest
