--- a/.github/workflows/build-xcframework-packages.yml
+++ b/.github/workflows/build-xcframework-packages.yml
@@ -32,7 +32,7 @@ on:
 
 jobs:
   build-xcfranework-packages:
-    runs-on: macos-latest
+    runs-on: macos-15
 
     steps:
       - name: Checkout Repository
