--- a/.github/workflows/build-swift-package.yml
+++ b/.github/workflows/build-swift-package.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build-swift-packages:
-    runs-on: macos-latest
+    runs-on: macos-15
 
     steps:
       - name: Checkout Repository
